02 - uprava readme.md a table.css

--- a/css/table.css
+++ b/css/table.css
@@ -1,64 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
 * {
-    font-family: 'Ubuntu', sans-serif;
-    color: gray;
+  font-family: "Ubuntu", sans-serif;
+  color: gray;
 }
-h1{
-    text-align: center;
-    background-color: rgb(28, 27, 31);
-    color: rgb(145, 154, 167);
-padding: 20px;
+h1 {
+  text-align: center;
+  background-color: rgb(28, 27, 31);
+  color: rgb(145, 154, 167);
+  padding: 20px;
 }
 
 body {
-    background-color: rgb(51, 50, 50)
+  background-color: rgb(51, 50, 50);
 }
-main{
-    width: 1200px;
-    margin: 0 auto;
+main {
+  width: 1200px;
+  margin: 0 auto;
 }
-table{
-    width: 100%;
-    font-size: larger;
-}
-
-table, th, td{
-    border: 1px solid #888;
-    border-collapse: collapse;
-}
-th, td{
-    padding: 10px;
+table {
+  width: 100%;
+  font-size: larger;
 }
 
-.text-center{
-    text-align: center;
+table,
+th,
+td {
+  border: 1px solid #888;
+  border-collapse: collapse;
 }
-.text-right{
-text-align: right;
+th,
+td {
+  padding: 10px;
 }
-.prvni{
-height: 200px;
+
+.text-center {
+  text-align: center;
 }
-.druhe{
-height: 100px;
+.text-right {
+  text-align: right;
 }
-.treti{
-height: 50px;
+.prvni {
+  height: 200px;
 }
-.text-bold{
-    font-weight: bold;
+.druhe {
+  height: 100px;
 }
-.gold{
-    background-color: goldenrod;
+.treti {
+  height: 50px;
 }
-.silver{
-background-color: silver;
+.text-bold {
+  font-weight: bold;
 }
-.bronze{
-background-color: #cd7f32;
+.gold {
+  background-color: goldenrod;
 }
-.nadpis-tabulka{
-    font-weight: bolder;
-    font-size: x-large;
+.silver {
+  background-color: silver;
+}
+.bronze {
+  background-color: #cd7f32;
+}
+.nadpis-tabulka {
+  font-weight: bolder;
+  font-size: x-large;
 }
